--- a/.github/workflows/dev-branch-deployment-pipeline.yml
+++ b/.github/workflows/dev-branch-deployment-pipeline.yml
@@ -6,10 +6,13 @@ on:
       - development
 
 env:
+  ENV_FILE_NAME: .env
+  ENV_FILE_PATH_IN_PRIVATE_REPOSITORY: ./Vault/Yulia-Lingo/Backend/.env
   DOCKER_COMPOSE_FILE: docker-compose.yml
   DOCKER_CONTAINER_NAME: yulia-lingo-backend
   DOCKER_IMAGE_NAME: yulia-lingo-backend
   DOCKER_HUB_ACCOUNT_NAME: zufarexplainedit
+  YULIA_LINGO_PATH_ON_THE_REMOTE_SERVER: /opt/project/Yulia-Lingo
   APP_PATH_ON_THE_REMOTE_SERVER: /opt/project/Yulia-Lingo
 
 jobs:
@@ -19,6 +22,16 @@ jobs:
     steps:
       - name: Checkout source code from the repository
         uses: actions/checkout@v4
+
+      - name: Clone the .env file from private repository (vault)
+        uses: actions/checkout@v4
+        with:
+          repository: Sunagatov/Vault
+          token: ${{ secrets.PRIVATE_REPO_ACCESS_TOKEN }}
+          path: Vault
+
+      - name: Copy the .env file to the workspace
+        run: cp $ENV_FILE_PATH_IN_PRIVATE_REPOSITORY ./
 
       - name: Set DOCKER_IMAGE_TAG
         run: echo "DOCKER_IMAGE_TAG=$GITHUB_REF_NAME-${GITHUB_SHA:0:7}" >> $GITHUB_ENV
@@ -53,7 +66,12 @@ jobs:
           key: ${{ secrets.SERVER_SSH_PRIV_KEY }}
           envs: DOCKER_IMAGE_TAG
           script: |
-            cd ${{ env.APP_PATH_ON_THE_REMOTE_SERVER }}
+            cd ${{ env.YULIA_LINGO_PATH_ON_THE_REMOTE_SERVER }}  
+            rm -rf Vault
+            git clone https://${{ secrets.PRIVATE_REPO_ACCESS_TOKEN }}:x-oauth-basic@github.com/Sunagatov/Vault.git
+            rm ${{ env.APP_PATH_ON_THE_REMOTE_SERVER }}/${{ env.ENV_FILE_NAME }}
+            cp ${{ env.YULIA_LINGO_PATH_ON_THE_REMOTE_SERVER }}/Vault/IcedLatte/Backend/${{ env.ENV_FILE_NAME }} ${{ env.APP_PATH_ON_THE_REMOTE_SERVER }}/${{ env.ENV_FILE_NAME }}
+            cd ${{ env.APP_PATH_ON_THE_REMOTE_SERVER }} 
             docker pull ${{ env.DOCKER_HUB_ACCOUNT_NAME }}/${{ env.DOCKER_IMAGE_NAME }}:${{ env.DOCKER_IMAGE_TAG }}
             docker-compose down ${{ env.DOCKER_CONTAINER_NAME }}
             docker-compose up -d ${{ env.DOCKER_CONTAINER_NAME }}
